

  ChangeLog.txt for libSUFR
  
******************************************************************************************
   60: 02/11/2011:  *** SF release v0.3.0 ***
     - Updated packaging scripts:
       - tar the package in a subdir: libSUFR-x.y.z/
       - store README, INSTALL, LICENCE, etc in / rather than /doc/
       - use gzip iso bzip2
       - added test script
       - made compatible with Gentoo ebuilds
     
   59: 20/10/2011:
     - Increased size of program_args to allow longer strings
     
   58: 19/10/2011:
     - Added routine find_free_io_unit() to find first unused I/O unit > 100
     
   
******************************************************************************************
   57: 17/10/2011:  *** SF release v0.2.1 ***
     - added version number to Doxygen documentation
     - 5059 lines of code
   
   56: 17/10/2011:
     - SF release v0.2.0, not recognised by SF
   
   55: 14/10/2011:
     - Updated CMake: make including compiler name in libs and module dir optional;
       use the option -DCOMPILER_SPECIFIC_LIBS=on to create compiler-dependent files
   
******************************************************************************************
   54: 10/10/2011:  *** SF release v0.1.9 ***
     - 5059 lines of code
     
   53: 10/10/2011:
     - Added routine replace_substring() to text.f90
     - Updated CMake: use INCLUDE_FLAGS directly, move CMAKE_VERBOSE_MAKEFILE to CMakeLists
     
   52: 07/10/2011:
     - Added constants: one,c3rd,rc3rd, stdErr,StdIn,StdOut, hostname,username
     - Simplified definition of intkindmax, realkindmax so that they can be parameters,
       needed for declarations.  This will cause problems with g95 though, since quad
       precision is partly implemented
     - Declare func as external in root_solver() and minimum_solver()
     

******************************************************************************************
   51: 15/08/2011:  *** SF release v0.1.8 ***
     - 5003 lines of code